--- a/MyApiWithDoc/index.html
+++ b/MyApiWithDoc/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>My API with Documentation</title>
+        <title>API with Authentication</title>
         <style>
             table {
                 border-collapse: collapse;
@@ -20,7 +20,7 @@
         </style>
     </head>
     <body>
-        <h1>My API with Documentation</h1>
+        <h1>API with Authentication</h1>
         <h2>Clients</h2>
         <table>
             <tr>
